Upgrade to Java 17 (#713)